--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,7 +21,9 @@ security:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
 
-            logout:       true
+            logout:
+                 path: /logout
+                 target: /
             anonymous:    true
 
     access_control:
