--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,14 +16,16 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: ^/
+            #pattern: ^/
             form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
+                #provider: fos_userbundle
+                #csrf_token_generator: security.csrf.token_manager
+                login_path: /login
+                check_path: /login
 
             logout:
-                 path: /logout
-                 target: /
+                path: /logout
+                target: /
             anonymous:    true
 
     access_control:
