--- a/src/AppBundle/Resources/config/doctrine/Respondent.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Respondent.orm.yml
@@ -18,3 +18,7 @@ AppBundle\Entity\Respondent:
           joinColumn:
             name: survey_id
             referencedColumnName: id
+    oneToMany:
+        answers:
+          targetEntity: AppBundle\Entity\Answer
+          mappedBy: respondent
