--- a/src/AppBundle/Resources/config/doctrine/Survey.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Survey.orm.yml
@@ -26,3 +26,7 @@ AppBundle\Entity\Survey:
           joinColumn:
             name: user_id
             referencedColumnName: id
+    oneToMany:
+        questions:
+          targetEntity: AppBundle\Entity\SurveyQuestion
+          mappedBy: survey
