--- a/src/AppBundle/Resources/config/doctrine/Respondent.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Respondent.orm.yml
@@ -18,6 +18,7 @@ AppBundle\Entity\Respondent:
           joinColumn:
             name: survey_id
             referencedColumnName: id
+            onDelete: CASCADE
     oneToMany:
         answers:
           targetEntity: AppBundle\Entity\Answer
