Profile page for user - Change Password feature - Update design on going

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,6 +4,18 @@ app:
 
 logout:
     path: /logout
+register:
+    path: /register
+
+user_profile_show:
+    path: /userprofile
+    defaults: { _controller: AppBundle:Profile:show }
+user_profile_edit:
+    path: /userprofile/edit
+    defaults: { _controller: AppBundle:Profile:edit }
+user_profile_password:
+    path: /userprofile/updatepsw
+    defaults: { _controller: AppBundle:ChangePassword:changePassword }
 
 home:
     path: /
