--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,6 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+    profile:
+            form:
+                type: AppBundle\Form\ProfileType
