Updated registration (Controller / Form) - enable auto-login after registration

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,3 +81,6 @@ fos_user:
     profile:
             form:
                 type: AppBundle\Form\ProfileType
+    registration:
+           form:
+               type: AppBundle\Form\RegistrationType
