--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -38,3 +38,8 @@ services:
         class: AppBundle\Form\ProfileType
         tags:
             - { name: form.type, alias: app_user_profile }
+
+    app.form.registration:
+       class: AppBundle\Form\RegistrationType
+       tags:
+           - { name: form.type, alias: app_user_registration }
