Fixed deleting choice error

--- a/src/AppBundle/Resources/config/doctrine/Answer.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Answer.orm.yml
@@ -38,6 +38,8 @@ AppBundle\Entity\Answer:
             joinColumns:
               answer_id:
                 referencedColumnName: id
+                onDelete: CASCADE
             inverseJoinColumns:
               choice_id:
                 referencedColumnName: id
+                onDelete: CASCADE
